tests/error/type_match/base_case_array_to_slice_const_propagation1.bz
// error: unable to match expression of type '[32: int32]' to mutable array slice type '[: mut int32]'
function test()
{
	let arr = [32: int32]();
	let _: [: mut int32] = arr;
}
